--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="icon" type="image/png" href="../images/logo.png">
-    <title>PayQin Assurance API</title>
+    <title>PayQin Business API</title>
 
     <style>
       .highlight table td { padding: 5px; }
